# contract/types.ts
@@ -5,6 +5,7 @@ export type Address = components['schemas']['Address']
 export type AppointmentDetails = components['schemas']['AppointmentDetails']
 export type AppointmentCreateRequest = components['schemas']['AppointmentCreateRequest']
 export type AppointmentUpdateRequest = components['schemas']['AppointmentUpdateRequest']
+export type AppointmentBrief = components['schemas']['AppointmentBrief']
 export type AppStatus = components['schemas']['AppStatus']
 export type Billing = components['schemas']['Billing']
 export type ClinicBrief = components['schemas']['ClinicBrief']
@@ -13,6 +14,7 @@ export type CMSPageContent = components['schemas']['CMSPageContent']
 export type Document = components['schemas']['Document']
 export type DoctorBrief = components['schemas']['DoctorBrief']
 export type LoginRequest = components['schemas']['LoginRequest']
+export type MedicalTreatment = components['schemas']['MedicalTreatment']
 export type Notification = components['schemas']['Notification']
 export type NotificationListItem = components['schemas']['NotificationListItem']
 export type PatientBrief = components['schemas']['PatientBrief']
@@ -23,7 +25,6 @@ export type ReferralCreateRequest = components['schemas']['ReferralCreateRequest
 export type ReferralUpdateRequest = components['schemas']['ReferralUpdateRequest']
 export type ServiceType = components['schemas']['ServiceType']
 export type ServiceOffer = components['schemas']['ServiceOffer']
-export type Treatment = components['schemas']['Treatment']
 export type Coordinates = components['schemas']['Coordinates']
 
 // Path response types
@@ -32,5 +33,6 @@ export type CreateAppointmentResponse = paths['/appointments']['post']['response
 export type GetAppointmentByIdResponse = paths['/appointments/{appointmentId}']['get']['responses']['200']['content']['application/json']
 export type LoginResponse = paths['/auth/login']['post']['responses']['200']['content']['application/json']
 export type RegisterRequest = components['schemas']['RegisterRequest']
-export type GetProfileResponse = paths['/profile']['get']['responses']['200']['content']['application/json']
-export type GetPrescribedTreatmentsResponse = paths['/prescribed-treatments']['get']['responses']['200']['content']['application/json']
+export type GetProfileResponse = paths['/patient/profile']['get']['responses']['200']['content']['application/json']
+export type GetMedicalTreatmentsResponse = paths['/treatments']['get']['responses']['200']['content']['application/json']
+export type GetPrescribedTreatmentsResponse = paths['/patient/treatments']['get']['responses']['200']['content']['application/json']
